--- a/style.css
+++ b/style.css
@@ -54,10 +54,12 @@ input::placeholder {
     border-radius: 5px;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
     overflow: hidden;
+    align-items: center;
+    text-align: center;
 }
 .search-result img {
-    height: 450px;
-    width: 450px;
+    width: 400px; 
+    height: 400px;
     object-fit: cover;
     transition: opacity 0.3s ease-in-out;
 }
@@ -65,6 +67,11 @@ input::placeholder {
     opacity: 0.8;
 }
 .search-result a {
+    max-width: 400px;
+    /* overflow: hidden;
+    white-space: normal; */
+    margin-top: 10px; 
+    word-wrap: break-word; 
     text-align: center;
     padding: 10px;
     font-size: 20px;
@@ -77,7 +84,7 @@ input::placeholder {
 .show-more {
     display: flex;
     justify-content: center;
-    margin-top: 19px;
+    margin: 29px;
 }
 #show-more {
     text-align: center;
